@@ -1,5 +1,9 @@
 2008-01-28  Vincent Untz  <vuntz@gnome.org>
 
+	* Makefile.am: clean this a bit
+
+2008-01-28  Vincent Untz  <vuntz@gnome.org>
+
 	* Makefile.am: updated to intltoolize the policy.in file
 	* gnome-clock-applet-mechanism.policy: moved...
 	* gnome-clock-applet-mechanism.policy.in: ... here, and mark strings
